--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smarttuna/ez-datetime-vanillajs",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "easy peasy datetime module (vanilla js)",
   "main": "src/index.js",
   "files": [
@@ -23,10 +23,13 @@
   "keywords": [
     "datetime",
     "timezone",
-    "vanillajs",
-    "javascript"
+    "vanillajs"
   ],
-  "author": "DongWon-Sehr",
+  "author": {
+    "name": "DongWon-Sehr",
+    "email": "dongwon.sehr@gmail.com",
+    "url": "https://github.com/DongWon-Sehr"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/DongWon-Sehr/ez-datetime-vanillajs/issues"
